[package]
name = "omni-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "OmniRoute telemetry: OTel, metrics, audit log"

[lib]
path = "src/lib.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true, features = ["v4", "serde"] }
omni-core     = { path = "../omni-core" }
omni-protocol = { path = "../omni-protocol" }
